--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Setup
-title:        Project or Site name
-tagline:      A responsive theme for your project on GitHub Pages
-baseurl:      ""
+title:        Vermilion
+tagline:      A C++ Raytracer
+baseurl:      "/Vermilion"
 paginate:     1
 
 # About/contact
 author:
-  name:       Author name
-  url:        http://yourhomepage.com 
+  name:       Chris Anderson
+  url:        https://casperthecat.github.io/
 
 # Gems
 gems:
