New Branch. BVH

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,20 +19,40 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp -Ofast -Wall -ggdb")
 #FIND_PACKAGE(OpenEXR)
 FIND_PACKAGE(OpenImageIO REQUIRED)
 
-set(SOURCE_FILES main.cpp
+set(SOURCE_FILES
+        main.cpp
         core/engines/renderEngine.cpp
-        core/engines/renderEngine.h
         core/engines/meshEngine.cpp
-        core/engines/meshEngine.h
         core/engines/loggingEngine.cpp
-        core/engines/loggingEngine.h
         core/camera/frameTile/frameTile.cpp
-        core/camera/frameTile/frameTile.h
-        core/types/types.h
         core/camera/camera.cpp
-        core/camera/camera.h
         core/integrators/integrators.cpp
+        core/nvidia/BVH.cpp
+        core/nvidia/BVHNode.cpp
+        core/nvidia/CudaBVH.cpp
+        core/nvidia/SplitBVHBuilder.cpp
+        core/nvidia/Util.cpp
+        core/nvidia/Sort.cpp
+        )
+
+set(HEADER_FILES 
         core/integrators/integrators.h
+        core/camera/frameTile/frameTile.h
+        core/engines/meshEngine.h
+        core/engines/renderEngine.h
+        core/types/types.h
+        core/engines/loggingEngine.h
+        core/camera/camera.h
+        core/nvidia/Array.h
+        core/nvidia/BVH.h
+        core/nvidia/BVHNode.h
+        core/nvidia/CudaBVH.h
+        core/nvidia/linear_math.h
+        core/nvidia/Scene.h
+        core/nvidia/SplitBVHBuilder.h 
+        core/integrators/integratorConstants.h
+        core/nvidia/Util.h
+        core/nvidia/Sort.h
         )
 
 include_directories(
@@ -41,6 +61,6 @@ include_directories(
 )
 
 link_directories(${CMAKE_SOURCE_DIR}/lib)
-add_executable(Vermilion ${SOURCE_FILES})
+add_executable(Vermilion ${HEADER_FILES} ${SOURCE_FILES})
 target_link_libraries(Vermilion ${CMAKE_SOURCE_DIR}/lib/libassimp.so.3.3.1 ${Boost_LIBRARIES} ${OIIO_LIBRARIES}
     )
