--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ endif()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -Wall -ggdb")
 #FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)
 #FIND_PACKAGE(OpenEXR)
-#FIND_PACKAGE(OpenImageIO REQUIRED)
+FIND_PACKAGE(OpenImageIO REQUIRED)
 #FIND_PACKAGE(OpenImageIO)
 
 
