Trying to fix sampling issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -Wall -ggdb")
 #FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)
 #FIND_PACKAGE(OpenEXR)
 FIND_PACKAGE(OpenImageIO REQUIRED)
+FIND_PACKAGE(Assimp REQUIRED)
+FIND_PACKAGE(GLM REQUIRED)
 #FIND_PACKAGE(OpenImageIO)
 
 
@@ -53,9 +55,16 @@ set(SOURCE_FILES main.cpp
 include_directories(
         ${Boost_INCLUDE_DIRS}
         ${OIIO_INCLUDE_DIRS}
+        ${Assimp_INCLUDE_DIRS}
+        ${GLM_INCLUDE_DIRS}
+
+        # Internal
+        core
 )
+
+
 
 link_directories(${CMAKE_SOURCE_DIR}/lib)
 add_executable(Vermilion ${SOURCE_FILES})
-target_link_libraries(Vermilion ${CMAKE_SOURCE_DIR}/lib/libassimp.so.3.3.1 ${Boost_LIBRARIES} ${OIIO_LIBRARIES}
+target_link_libraries(Vermilion assimp ${Assimp_LIBRARIES} ${Boost_LIBRARIES} ${OIIO_LIBRARIES}
     )
