--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.1)
 project(Vermilion)
 
-set(Boost_USE_STATIC_LIBS TRUE)
-set(Boost_USE_MULTITHREADED TRUE)
-set(Boost_USE_STATIC_RUNTIME FALSE)
+#set(Boost_USE_STATIC_LIBS TRUE)
+#set(Boost_USE_MULTITHREADED TRUE)
+#set(Boost_USE_STATIC_RUNTIME FALSE)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -21,6 +21,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -Wall -ggdb")
 #FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)
 #FIND_PACKAGE(OpenEXR)
 FIND_PACKAGE(OpenImageIO REQUIRED)
+FIND_PACKAGE(assimp REQUIRED)
 #FIND_PACKAGE(OpenImageIO)
 
 
@@ -53,9 +54,19 @@ set(SOURCE_FILES main.cpp
 include_directories(
         ${Boost_INCLUDE_DIRS}
         ${OIIO_INCLUDE_DIRS}
+        ${ASSIMP_INCLUDE_DIRS}
+        ${CMAKE_SOURCE_DIR}
 )
 
-link_directories(${CMAKE_SOURCE_DIR}/lib)
+#link_directories(${CMAKE_SOURCE_DIR}/lib)
+
 add_executable(Vermilion ${SOURCE_FILES})
-target_link_libraries(Vermilion ${CMAKE_SOURCE_DIR}/lib/libassimp.so.3.3.1 ${Boost_LIBRARIES} ${OIIO_LIBRARIES}
-    )
+
+
+MESSAGE( STATUS "CMAwe:         " ${ASSIMP_LIBRARIES} )
+target_link_libraries(Vermilion
+    ${ASSIMP_LIBRARIES}
+    #${CMAKE_SOURCE_DIR}/lib/libassimp.so.3.3.1 
+    ${Boost_LIBRARIES} 
+    ${OIIO_LIBRARIES}
+)
