--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ compiler:
 
 before_install:
   - sudo apt update
-  - sudo apt install -y libopenimageio
+  - sudo apt install -y libopenimageio-dev
   - sudo apt install -y libvulkan1 libvulkan-dev
 
 script:
