--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ compiler:
 before_install:
   - sudo apt update
   - sudo apt install -y libopenimageio-dev
-  - sudo apt install -y libvulkan1 libvulkan-dev
+  - sudo apt install -y libvulkan1 libvulkan-dev libxorg-dev
 
 script:
   - mkdir Build/
